Bug 1495698 - Fix hang when HTML signature references non-existent image. r=aceman